# python_project_template

./: README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature.md  refactor.md
environments/: Dockerfile_python  docker-compose.yml  env-template
tests/: test_example.py
